--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-smooth-dnd": "^0.11.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
